Fix issue with wrong font on home/index page

--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -1,6 +1,6 @@
 body {
     background-color: white; 
-    font-family: 'Fira Mono', sans-serif; 
+    font-family: 'Fira Mono', monospace; 
     font-size: 12px;
 }
 
